Added github actions modular, multistage mlops-pipeline.yaml and modified mlops-ci-workflow.yaml

--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -1,15 +1,10 @@
 name: MLOPS CI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch: {}
 
 jobs:
-  workflow:
+  e2e_mlops_workflow:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
